# rk3568-mpp

./: .gitignore  README.md
docs/superpowers/plans/: 2026-06-28-live555-rtsp-server-plan.md  2026-06-28-v4l2-mpp-rtsp-plan.md
docs/superpowers/specs/: 2026-06-28-live555-rtsp-server-design.md  2026-06-28-v4l2-mpp-rtsp-design.md
examples/v4l2-rtsp/: CMakeLists.txt  H264FramedSource.cpp  H264FramedSource.h  config.h  main.c  mpp_encoder.c  mpp_encoder.h  rtsp_server.cpp  rtsp_server.h  ts_queue.c  ts_queue.h  v4l2_capture.c  v4l2_capture.h
examples/v4l2-rtsp/.msys000000000014c00228e6a38f22a6abec/: CMakeCache.txt  Makefile  cmake_install.cmake
mpp/: version.h
osal/linux/: os_log.cpp
